--- a/Demo_one.html
+++ b/Demo_one.html
@@ -3,6 +3,6 @@
         <title>My First HTML code</title>
     </head>
     <body>
-        here we learn about everything about html
+        <h1><Center>we learn about everything about html</Center></h1> 
     </body>
 </html>
