--- a/buttons.html
+++ b/buttons.html
@@ -8,8 +8,18 @@
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
+    transition: opacity 1s;
 
 }
+ .Subscribe-Button:hover{
+    opacity: 0.2;
+ }
+
+ .Subscribe-Button:active{
+    opacity: 0.3;
+ }
+
+
 .JOIN-Button{
     background-color: rgb(249, 246, 246);
     color: rgb(0, 183, 255);
@@ -18,8 +28,19 @@
     width: 50px;
     border-radius: 2px;
     border-style: solid;
+    font-weight: bold; 
+    font-size: 13px;
     cursor: pointer;
     margin-right: 8px;
+}
+
+.JOIN-Button:hover{
+    background-color: rgb(0, 183, 255);
+    color: rgb(249, 246, 246);
+}
+
+.JOIN-Button:active{
+    opacity: 0.5;
 }
 
 .tweet-button{
@@ -30,7 +51,7 @@
     border-radius: 18px;
     height: 35px;
     width: 70px;
-    font-weight: bold;
+    font-weight: bold; 
     font-size: 15px;
     cursor: pointer;
 }
