--- a/buttons.html
+++ b/buttons.html
@@ -8,7 +8,7 @@
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
-    transition: opacity 1s;
+    transition: opacity 0.5s;
 
 }
  .Subscribe-Button:hover{
@@ -32,6 +32,7 @@
     font-size: 13px;
     cursor: pointer;
     margin-right: 8px;
+    transition:    background-color 0.5s , color 0.5s ;
 }
 
 .JOIN-Button:hover{
@@ -54,6 +55,12 @@
     font-weight: bold; 
     font-size: 15px;
     cursor: pointer;
+    transition:  box-shadow 0.5s;
+    
+}
+
+.tweet-button:hover{
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 </style>
