--- a/buttons.html
+++ b/buttons.html
@@ -9,6 +9,7 @@
     cursor: pointer;
     margin-right: 8px;
     transition: opacity 0.5s;
+    vertical-align: top;
 
 }
  .Subscribe-Button:hover{
@@ -24,8 +25,11 @@
     background-color: rgb(249, 246, 246);
     color: rgb(0, 183, 255);
     border-color:rgb(0, 183, 255);
-    height: 35px;
-    width: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    border-width: 1px;
     border-radius: 2px;
     border-style: solid;
     font-weight: bold; 
@@ -56,6 +60,7 @@
     font-size: 15px;
     cursor: pointer;
     transition:  box-shadow 0.5s;
+    vertical-align: top;
     
 }
 
