--- a/text.html
+++ b/text.html
@@ -1,6 +1,10 @@
 <style>
-.video-title {
+    p{
     font-family: Arial;
+    margin-top: 0;
+    }
+
+.video-title {
     font-size: 20px;
     font-weight: bold;
     width: 350px;
@@ -9,18 +13,14 @@
 }
 
 .video-stats{
-    font-family: Arial;
     font-size: 14px;
     color: rgb(96, 96, 96);
-    margin-top: 0;
     margin-bottom: 20px;
 }
 
 .checkmark{
-    font-family: Arial;
     font-size: 14px;
     color: rgb(96, 96, 96);
-    margin-top: 0;
     margin-bottom: 20px;
     
 }
@@ -29,9 +29,29 @@
     font-family: Arial;
     font-size: 14px;
     color: rgb(96, 96, 96);
-    margin-top: 0;
     width: 280px;
     line-height: 20px;
+    margin-bottom: 100px;
+}
+
+.label{
+    margin-bottom: 50px ;
+    font-size: 14px;
+    background-color: rgb(227, 65, 64);
+    text-align: center;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px  ;
+
+}
+
+.Desiginig_Shop{
+    margin-left: 10px;
+}
+
+.Desiginig_Shop:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 
@@ -53,4 +73,10 @@
     Talking tech and AI on the heels of Google I/O. 
     Also a daily driver phone reveal from Google's CEO. 
     Shoutout to Sundar!
+</p>
+
+
+
+<p class="Label">
+    Shop early for the best selection of holiday favourites. <span class="Desiginig_Shop">Shop now &gt;</span> 
 </p>
