--- a/HTML-Files/buttons.html
+++ b/HTML-Files/buttons.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Buttons</title>
-        <link rel="stylesheet" href="D:\HTML_&_CSS Folder\CSS_Files">
+        <link rel="stylesheet" href="CSS_Files/buttons.css">
     </head>
     <body>
         
